@startuml diagrama-de-clases-nebriacademy
!define BACKEND_COLOR #E1F5FE
!define RELATIONSHIP_COLOR #FFF9C4
!define USER_COLOR #C8E6C9
!define FRONTEND_COLOR #FFE0B2

skinparam class {
  BackgroundColor #E1F5FE
  BorderColor #01579B
  ArrowColor #01579B
}

' ════════════════════════════════════════════════════════════════════
' BACKEND - CLASES PRINCIPALES - USUARIOS
' ════════════════════════════════════════════════════════════════════

class Usuarios {
  --Atributos--
  # id : int [PK]
  # tipo : ENUM
  --Métodos--
  + create() : Promise<Usuarios>
  + findAll() : Promise<Usuarios[]>
  + findById(id: int) : Promise<Usuarios>
  + update(data: object) : Promise<void>
  + delete(id: int) : Promise<void>
}

class Alumnos #C8E6C9 {
  --Atributos--
  # usuarioId : int [FK]
  - dni : string [UNIQUE]
  - nombre : string
  - apellidos : string
  - email : string [UNIQUE]
  - contrasena : string
  - numeroTarjeta : string [UNIQUE]
  - numTelefono : string
  - redes : text
  - pais : string
  - localidad : string
  - esVinculado : int
  - profesorVinculadoId : int
  --Métodos--
  + create(data: object) : Promise<Alumnos>
  + findAll() : Promise<Alumnos[]>
  + findById(id: int) : Promise<Alumnos>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
  + enrollCourse(cursoId: int) : Promise<void>
  + linkProfessor(profesorId: int) : Promise<void>
}

class Profesores #C8E6C9 {
  --Atributos--
  # usuarioId : int [FK]
  - dni : string [UNIQUE]
  - nombre : string
  - apellidos : string
  - email : string [UNIQUE]
  - contrasena : string
  - numCuentaBancaria : string [UNIQUE]
  - numTelefono : string
  - especializacion : ENUM
  - imagenPerfil : string
  - alumnoVinculadoId : int
  --Métodos--
  + create(data: object) : Promise<Profesores>
  + findAll() : Promise<Profesores[]>
  + findById(id: int) : Promise<Profesores>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
  + createCourse(data: object) : Promise<Cursos>
  + gradExercise(ejercicioId: int, calificacion: float) : Promise<void>
}

class Administradores #C8E6C9 {
  --Atributos--
  # usuarioId : int [FK]
  - dni : string [UNIQUE]
  - nombre : string
  - apellidos : string
  - email : string [UNIQUE]
  - contrasena : string
  - numCuentaBancaria : string [UNIQUE]
  - numTelefono : string
  --Métodos--
  + create(data: object) : Promise<Administradores>
  + findAll() : Promise<Administradores[]>
  + findById(id: int) : Promise<Administradores>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
  + deleteUser(id: int) : Promise<void>
  + manageContent() : Promise<void>
}

' ════════════════════════════════════════════════════════════════════
' BACKEND - CONTENIDO EDUCATIVO
' ════════════════════════════════════════════════════════════════════

class Cursos {
  --Atributos--
  # id : int [PK]
  # nombreCurso : string
  # categoria : ENUM
  # profesor : int [FK]
  # nivel : string
  - valoracion : float
  - descripcion : text
  - imagen : string
  --Métodos--
  + create(data: object) : Promise<Cursos>
  + findAll(filtros?: object) : Promise<Cursos[]>
  + findById(id: int) : Promise<Cursos>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
  + rateCourse(rating: float) : Promise<void>
  + addStudent(alumnoId: int) : Promise<void>
}

class Ejercicios {
  --Atributos--
  # id : int [PK]
  # autor : int [FK]
  # curso : int [FK]
  - nombre : text
  - archivo : string
  - descripcion : text
  --Métodos--
  + create(data: object) : Promise<Ejercicios>
  + findAll() : Promise<Ejercicios[]>
  + findById(id: int) : Promise<Ejercicios>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
  + submitSolution(alumnoId: int, archivo: string) : Promise<void>
  + grade(alumnoId: int, puntuacion: float) : Promise<void>
}

class Videos {
  --Atributos--
  # id : int [PK]
  # autor : int [FK]
  # curso : int [FK]
  # nombre : string
  # archivo : string
  --Métodos--
  + create(data: object) : Promise<Videos>
  + findAll() : Promise<Videos[]>
  + findById(id: int) : Promise<Videos>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
}

class Apuntes {
  --Atributos--
  # id : int [PK]
  # autor : int [FK]
  # curso : int [FK]
  # categoria : ENUM
  # nombre : text
  # archivo : string
  - descripcion : text
  - valoracion : float
  --Métodos--
  + create(data: object) : Promise<Apuntes>
  + findAll(filtros?: object) : Promise<Apuntes[]>
  + findById(id: int) : Promise<Apuntes>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
  + addLike(alumnoId: int) : Promise<void>
  + removeLike(alumnoId: int) : Promise<void>
  + updateRating() : Promise<void>
}

' ════════════════════════════════════════════════════════════════════
' BACKEND - NOTIFICACIONES Y COMENTARIOS
' ════════════════════════════════════════════════════════════════════

class Notificaciones {
  --Atributos--
  # id : int [PK]
  # usuarioId : int [FK]
  # tipoUsuario : string
  # mensaje : string
  - enlace : string
  - vista : boolean
  - fecha : date
  --Métodos--
  + create(data: object) : Promise<Notificaciones>
  + findAll() : Promise<Notificaciones[]>
  + findById(id: int) : Promise<Notificaciones>
  + markAsRead(id: int) : Promise<void>
  + delete(id: int) : Promise<void>
  + getUnread(usuarioId: int) : Promise<Notificaciones[]>
}

class ComentarioAlumnoCurso {
  --Atributos--
  # id : int [PK]
  # usuarioId : int [FK]
  # cursoId : int [FK]
  - comentario : text
  --Métodos--
  + create(data: object) : Promise<ComentarioAlumnoCurso>
  + findAll() : Promise<ComentarioAlumnoCurso[]>
  + findById(id: int) : Promise<ComentarioAlumnoCurso>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
}

' ════════════════════════════════════════════════════════════════════
' BACKEND - TABLAS DE RELACIÓN (MANY-TO-MANY)
' ════════════════════════════════════════════════════════════════════

class CursosAlumnos #FFF9C4 {
  --Atributos--
  # id : int [PK]
  # cursoId : int [FK]
  # alumnoId : int [FK]
  - favorito : boolean
  - apuntado : boolean
  - valoracion : boolean
  --Métodos--
  + create(data: object) : Promise<CursosAlumnos>
  + findAll() : Promise<CursosAlumnos[]>
  + toggleFavorite(cursoId: int, alumnoId: int) : Promise<void>
  + toggleEnrolled(cursoId: int, alumnoId: int) : Promise<void>
  + delete(id: int) : Promise<void>
}

class EjerciciosAlumnos #FFF9C4 {
  --Atributos--
  # id : int [PK]
  # ejercicioId : int [FK]
  # alumnoId : int [FK]
  - archivo : string
  --Métodos--
  + create(data: object) : Promise<EjerciciosAlumnos>
  + findAll() : Promise<EjerciciosAlumnos[]>
  + update(id: int, data: object) : Promise<void>
  + delete(id: int) : Promise<void>
}

class ApuntesAlumnos #FFF9C4 {
  --Atributos--
  # id : int [PK]
  # apunteId : int [FK]
  # alumnoId : int [FK]
  - megusta : boolean
  --Métodos--
  + create(data: object) : Promise<ApuntesAlumnos>
  + findAll() : Promise<ApuntesAlumnos[]>
  + toggleLike(apunteId: int, alumnoId: int) : Promise<void>
  + delete(id: int) : Promise<void>
}

class PuntuacionesEjercicios #FFF9C4 {
  --Atributos--
  # id : int [PK]
  # ejercicioId : int [FK]
  # alumnoId : int [FK]
  - puntuacion : float
  --Métodos--
  + create(data: object) : Promise<PuntuacionesEjercicios>
  + findAll() : Promise<PuntuacionesEjercicios[]>
  + update(id: int, puntuacion: float) : Promise<void>
  + delete(id: int) : Promise<void>
}

' ════════════════════════════════════════════════════════════════════
' RELACIONES - HERENCIA (BACKEND)
' ════════════════════════════════════════════════════════════════════

Usuarios <|-- Alumnos : hereda
Usuarios <|-- Profesores : hereda
Usuarios <|-- Administradores : hereda

' ════════════════════════════════════════════════════════════════════
' RELACIONES - BACKEND
' ════════════════════════════════════════════════════════════════════

Alumnos "1" -- "*" CursosAlumnos : inscrito en
CursosAlumnos "*" -- "1" Cursos : contiene

Profesores "1" -- "*" Cursos : crea
Profesores "1" -- "*" Ejercicios : autor de
Profesores "1" -- "*" Videos : autor de
Profesores "1" -- "*" Apuntes : autor de

Cursos "1" -- "*" Ejercicios : contiene
Cursos "1" -- "*" Videos : contiene
Cursos "1" -- "*" Apuntes : contiene
Cursos "1" -- "*" ComentarioAlumnoCurso : recibe

Alumnos "1" -- "*" EjerciciosAlumnos : entrega
EjerciciosAlumnos "*" -- "1" Ejercicios : resuelto

Alumnos "1" -- "*" ApuntesAlumnos : valora
ApuntesAlumnos "*" -- "1" Apuntes : valorado

Alumnos "1" -- "*" PuntuacionesEjercicios : recibe
PuntuacionesEjercicios "*" -- "1" Ejercicios : califica

Usuarios "1" -- "*" Notificaciones : recibe
Alumnos "1" -- "*" ComentarioAlumnoCurso : comenta

note right of Usuarios
  Base de jerarquía de usuarios
  (+) Público | (-) Privado | (#) Protegido
end note

note right of Cursos
  Gestión de cursos con categoría ENUM
  y sistema de valoración
end note

note right of Apuntes
  Contenido compartido con sistema
  de likes y valoración dinámica
end note

@enduml
  - password : string
  - loading : boolean
  --Métodos--
  + handleLogin() : Promise<void>
  + handleRegister() : void
  + validateForm() : boolean
}

class RegisterGrid #FFE0B2 {
  --Atributos--
  - formData : object
  - step : int
  - userType : string
  --Métodos--
  + handleNextStep() : void
  + handlePrevStep() : void
  + submitRegistration() : Promise<void>
  + validateStep() : boolean
}

class ProfileGrid #FFE0B2 {
  --Atributos--
  - profileData : object
  - editing : boolean
  - imageUrl : string
  --Métodos--
  + handleEditProfile() : void
  + handleSaveProfile() : Promise<void>
  + uploadProfileImage() : Promise<void>
  + handleCancel() : void
}

class Home #FFE0B2 {
  --Atributos--
  - userType : string
  - courses : array
  - notifications : array
  --Métodos--
  + loadUserCourses() : Promise<void>
  + loadNotifications() : Promise<void>
  + renderDashboard() : JSX
  + filterCourses() : array
}

class CourseGrid #FFE0B2 {
  --Atributos--
  - courseId : int
  - courseData : object
  - enrolled : boolean
  - isOwner : boolean
  --Métodos--
  + loadCourseData() : Promise<void>
  + handleEnroll() : Promise<void>
  + handleRate() : Promise<void>
  + loadComments() : Promise<void>
  + submitComment() : Promise<void>
  + handleDownload() : void
}

class Nav #FFE0B2 {
  --Atributos--
  - searchQuery : string
  - searchResults : array
  - notifications : int
  - userMenu : boolean
  --Métodos--
  + handleSearch() : Promise<void>
  + handleLogout() : void
  + toggleNotifications() : void
  + handleUserMenu() : void
  + clearCache() : void
}

class AddCourseGrid #FFE0B2 {
  --Atributos--
  - courseForm : object
  - imageFile : File
  - uploading : boolean
  --Métodos--
  + handleFormChange() : void
  + handleImageUpload() : Promise<void>
  + handleCreateCourse() : Promise<void>
  + validateCourseForm() : boolean
  + handleCancel() : void
}

class GradeExercisesGrid #FFE0B2 {
  --Atributos--
  - submissions : array
  - selectedSubmission : object
  - grade : float
  --Métodos--
  + loadSubmissions() : Promise<void>
  + handleSelectSubmission() : void
  + handleGradeChange() : void
  + submitGrade() : Promise<void>
  + downloadFile() : void
}

class Avatar #FFE0B2 {
  --Atributos--
  - user : object
  - size : string
  - imageUrl : string
  --Métodos--
  + handleImageError() : void
  + getInitials() : string
}

' ════════════════════════════════════════════════════════════════════
' STORES Y SERVICIOS
' ════════════════════════════════════════════════════════════════════

class useAuthStore #FFE0B2 {
  --Atributos--
  - user : object
  - token : string
  - isLogged : boolean
  --Métodos--
  + login(credentials: object) : Promise<void>
  + logout() : void
  + setUser(user: object) : void
  + updateProfile(data: object) : Promise<void>
  + checkToken() : boolean
}

class useToastStore #FFE0B2 {
  --Atributos--
  - toasts : array
  --Métodos--
  + showToast(message: string, type: string) : void
  + removeToast(id: int) : void
}

class useModalStore #FFE0B2 {
  --Atributos--
  - modals : object
  --Métodos--
  + openModal(key: string, data?: object) : Promise<boolean>
  + closeModal(key: string) : void
}

' ════════════════════════════════════════════════════════════════════
' RELACIONES - HERENCIA (BACKEND)
' ════════════════════════════════════════════════════════════════════

Usuarios <|-- Alumnos : hereda
Usuarios <|-- Profesores : hereda
Usuarios <|-- Administradores : hereda

' ════════════════════════════════════════════════════════════════════
' RELACIONES - BACKEND
' ════════════════════════════════════════════════════════════════════

Alumnos "1" -- "*" CursosAlumnos : inscrito en
CursosAlumnos "*" -- "1" Cursos : contiene

Profesores "1" -- "*" Cursos : crea
Profesores "1" -- "*" Ejercicios : autor de
Profesores "1" -- "*" Videos : autor de
Profesores "1" -- "*" Apuntes : autor de

Cursos "1" -- "*" Ejercicios : contiene
Cursos "1" -- "*" Videos : contiene
Cursos "1" -- "*" Apuntes : contiene
Cursos "1" -- "*" ComentarioAlumnoCurso : recibe

Alumnos "1" -- "*" EjerciciosAlumnos : entrega
EjerciciosAlumnos "*" -- "1" Ejercicios : resuelto

Alumnos "1" -- "*" ApuntesAlumnos : valora
ApuntesAlumnos "*" -- "1" Apuntes : valorado

Alumnos "1" -- "*" PuntuacionesEjercicios : recibe
PuntuacionesEjercicios "*" -- "1" Ejercicios : califica

Usuarios "1" -- "*" Notificaciones : recibe
Alumnos "1" -- "*" ComentarioAlumnoCurso : comenta

' ════════════════════════════════════════════════════════════════════
' RELACIONES - FRONTEND
' ════════════════════════════════════════════════════════════════════

LoginGrid --|> useAuthStore : usa
RegisterGrid --|> useAuthStore : usa
ProfileGrid --|> useAuthStore : usa

Home --|> useAuthStore : usa
Home --|> useToastStore : usa
Home --|> useModalStore : usa

CourseGrid --|> useAuthStore : usa
CourseGrid --|> useToastStore : usa

Nav --|> useAuthStore : usa
Nav --|> useToastStore : usa

AddCourseGrid --|> useAuthStore : usa
AddCourseGrid --|> useToastStore : usa

GradeExercisesGrid --|> useAuthStore : usa
GradeExercisesGrid --|> useToastStore : usa

Avatar --|> useAuthStore : usa

' ════════════════════════════════════════════════════════════════════
' RELACIONES - FRONTEND A BACKEND
' ════════════════════════════════════════════════════════════════════

LoginGrid ..> Usuarios : autentica
RegisterGrid ..> Usuarios : crea
ProfileGrid ..> Alumnos : edita
ProfileGrid ..> Profesores : edita

Home ..> Cursos : consulta
Home ..> Apuntes : consulta

CourseGrid ..> Cursos : consulta
CourseGrid ..> Ejercicios : consulta
CourseGrid ..> Videos : consulta
CourseGrid ..> ComentarioAlumnoCurso : consulta
CourseGrid ..> CursosAlumnos : modifica

AddCourseGrid ..> Cursos : crea

GradeExercisesGrid ..> Ejercicios : consulta
GradeExercisesGrid ..> EjerciciosAlumnos : consulta
GradeExercisesGrid ..> PuntuacionesEjercicios : crea

Nav ..> Notificaciones : consulta

note right of Usuarios
  Base de jerarquía de usuarios
  (+) Público | (-) Privado | (#) Protegido
end note

note right of Cursos
  Gestión de cursos con categoría ENUM
  y sistema de valoración
end note

note right of Apuntes
  Contenido compartido con sistema
  de likes y valoración dinámica
end note

note right of Home
  Dashboard personalizado según tipo:
  Alumno | Profesor | Administrador
end note

note right of useAuthStore
  Gestión de autenticación persistente
  en localStorage + token
end note

@enduml